--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Montserrat:wght@300;400;600&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Phần 1: Mở đầu -->
@@ -28,23 +28,23 @@
         
         <!-- Container cho lời chúc như lyric -->
         <div class="lyrics-container">
-            <!-- Các dòng chữ sẽ xuất hiện tuần tự -->
+            <!-- Các dòng chữ sẽ xuất hiện tuần tự với hiệu ứng gõ chữ -->
             <div class="lyric-line active" data-index="0">
                 <span class="lyric-icon">🎄</span>
-                <span class="lyric-text">Merry Christmas</span>
+                <span class="lyric-text typed-text">Merry Christmas</span>
             </div>
             <div class="lyric-line" data-index="1">
-                <span class="lyric-text">Chúc em một mùa Noel an lành</span>
+                <span class="lyric-text typed-text">Chúc em một mùa Noel an lành</span>
             </div>
             <div class="lyric-line" data-index="2">
-                <span class="lyric-text">Ấm áp – Hạnh phúc – Bình yên</span>
+                <span class="lyric-text typed-text">Ấm áp – Hạnh phúc – Bình yên</span>
             </div>
             <div class="lyric-line" data-index="3">
-                <span class="lyric-text">Yêu thương ngập tràn</span>
+                <span class="lyric-text typed-text">Yêu thương ngập tràn</span>
             </div>
             <div class="lyric-line" data-index="4">
                 <span class="lyric-icon">❄️</span>
-                <span class="lyric-text">Giáng Sinh vui vẻ</span>
+                <span class="lyric-text typed-text">Giáng Sinh vui vẻ</span>
                 <span class="lyric-icon">❄️</span>
             </div>
         </div>
