--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <section id="intro-section" class="section active">
         <canvas id="snow-intro"></canvas>
         <div class="intro-content">
-            <h1 class="intro-title">Giáng Sinh Ấm Áp</h1>
+            <h1 class="intro-title">Giáng Sinh Có Em</h1>
             <button id="open-gift-btn" class="gift-button">
                 <span class="button-icon">🎁</span>
-                <span class="button-text">MỞ QUÀ</span>
+                <span class="button-text">NHẤN VÀO ĐI NÈE</span>
             </button>
         </div>
     </section>
@@ -31,13 +31,13 @@
             <!-- Các dòng chữ sẽ xuất hiện tuần tự với hiệu ứng gõ chữ -->
             <div class="lyric-line active" data-index="0">
                 <span class="lyric-icon">🎄</span>
-                <span class="lyric-text typed-text">Merry Christmas</span>
+                <span class="lyric-text typed-text">Chúc em Giáng Sinh</span>
             </div>
             <div class="lyric-line" data-index="1">
-                <span class="lyric-text typed-text">Chúc em một mùa Noel an lành</span>
+                <span class="lyric-text typed-text">Một mùa Noel vủi vẻ, hạnh phúc</span>
             </div>
             <div class="lyric-line" data-index="2">
-                <span class="lyric-text typed-text">Ấm áp – Hạnh phúc – Bình yên</span>
+                <span class="lyric-text typed-text">Gặp thật nhiều điều may mắn</span>
             </div>
             <div class="lyric-line" data-index="3">
                 <span class="lyric-text typed-text">Yêu thương ngập tràn</span>
