--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+n<!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
@@ -14,10 +14,10 @@
     <section id="intro-section" class="section active">
         <canvas id="snow-intro"></canvas>
         <div class="intro-content">
-            <h1 class="intro-title">Giáng Sinh Có Em</h1>
+            <h1 class="intro-title">Giáng Sinh Vui Vẻ</h1>
             <button id="open-gift-btn" class="gift-button">
                 <span class="button-icon">🎁</span>
-                <span class="button-text">NHẤN VÀO ĐI NÈE</span>
+                <span class="button-text">NHẤN VÀO NÒO</span>
             </button>
         </div>
     </section>
