--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ n<!DOCTYPE html>
             <button id="open-gift-btn" class="gift-button">
                 <span class="button-icon">🎁</span>
                 <span class="button-text">NHẤN VÀO NÒO</span>
+                 <span class="button-icon">🎁</span>
             </button>
         </div>
     </section>
