--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ n<!DOCTYPE html>
             <div class="lyric-line active" data-index="0">
                 <span class="lyric-icon">🎄</span>
                 <span class="lyric-text typed-text">Chúc em Giáng Sinh</span>
+                <span class="lyric-icon">🎄</span>
             </div>
             <div class="lyric-line" data-index="1">
                 <span class="lyric-text typed-text">Một mùa Noel vủi vẻ, hạnh phúc</span>
