Update Christmas lyrics in index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ n<!DOCTYPE html>
             <!-- Các dòng chữ sẽ xuất hiện tuần tự với hiệu ứng gõ chữ -->
             <div class="lyric-line active" data-index="0">
                 <span class="lyric-icon">🎄</span>
-                <span class="lyric-text typed-text">Chúc em Giáng Sinh</span>
+                <span class="lyric-text typed-text">Giáng Sinh chúc em</span>
                 <span class="lyric-icon">🎄</span>
             </div>
             <div class="lyric-line" data-index="1">
